--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900);
+h1 {
+  font-family: Roboto;
+  font-size: 50px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  color: #444444;
+}
+
 body {
   margin: 0;
 }
@@ -74,15 +86,15 @@ body {
   background-clip: padding-box;
 }
 .topBar .multiLanguage .onoffswitch4-inner:before {
-  content: "VN";
+  content: "EN";
   padding-left: 30px;
   color: #ffffff;
-  content: url("./image/vn.png");
+  content: url("./image/en.png");
 }
 .topBar .multiLanguage .onoffswitch4-inner:after {
-  content: "EN";
+  content: "VN";
   padding-right: 30px;
-  content: url("./image/en.png");
+  content: url("./image/vn.png");
   color: #ffffff;
   text-align: right;
 }
@@ -110,8 +122,9 @@ body {
   overflow: hidden;
 }
 .navigationBar .naviWithLogo {
-  padding-top: 4px;
-  padding-bottom: 10px;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 5px;
 }
 .navigationBar .naviWithLogo .logo {
   left: 0;
@@ -119,6 +132,7 @@ body {
 }
 .navigationBar .naviWithLogo .naviBar {
   align-content: center;
+  float: left;
 }
 .navigationBar .naviWithLogo .naviBar ul {
   list-style-type: none;
@@ -130,14 +144,28 @@ body {
   float: left;
 }
 .navigationBar .naviWithLogo .naviBar ul li a {
+  text-transform: uppercase;
   display: block;
-  color: #444444;
   text-align: center;
-  padding: 14px 16px;
+  padding: 18px 15px;
   text-decoration: none;
+  font-family: Roboto;
+  font-size: 17px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 0.8;
+  letter-spacing: normal;
+  color: #222222;
 }
-.navigationBar .naviWithLogo .naviBar ul li:hover {
-  background-color: #111;
+.navigationBar .naviWithLogo .search {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  height: 48px;
+}
+.navigationBar .naviWithLogo .search img {
+  padding-right: 50px;
 }
 
 .slideShow {
@@ -196,7 +224,7 @@ body {
   overflow: hidden;
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 713px;
   z-index: 1;
 }
 .slideShow .slideshow .slideshow-inner {
@@ -369,6 +397,380 @@ body {
   height: 26px;
   fill: #fff;
   transition: left 0.2s ease;
+}
+
+.panelServies {
+  text-align: center;
+}
+.panelServies .title {
+  width: 100%;
+  padding: 50px;
+}
+.panelServies .serviceContent {
+  width: 100%;
+}
+.panelServies .serviceContent .content {
+  text-align: center;
+}
+.panelServies .serviceContent .content h3 {
+  padding: 30px 0px;
+}
+
+.panelExpertise {
+  background-image: url("./image/group-11.png");
+}
+.panelExpertise .header {
+  width: 100%;
+  text-align: center;
+}
+.panelExpertise .header h1 {
+  padding: 50px 0px 20px 0px;
+  color: #ffffff;
+  opacity: 0.7;
+}
+.panelExpertise .expertiseContent {
+  width: 100%;
+}
+.panelExpertise .expertiseContent .content {
+  margin-bottom: 40px;
+  width: 330px;
+  height: 215px;
+  text-align: center;
+  position: relative;
+}
+.panelExpertise .expertiseContent .content img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.panelExpertise .expertiseContent .content h3 {
+  width: 242px;
+  height: 30px;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.panelExpertise .expertiseContent .first {
+  margin-right: 50px;
+}
+.panelExpertise .expertiseContent .center {
+  margin: 0px 25px 0px 25px;
+}
+.panelExpertise .expertiseContent .last {
+  margin-left: 50px;
+}
+
+.contactForm {
+  margin-top: 60px;
+  padding-bottom: 100px;
+}
+.contactForm .form {
+  width: 1440px;
+  box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+}
+.contactForm .form .imageContactForm {
+  height: 480px;
+}
+.contactForm .form .imageContactForm img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.contactForm .form .inputContact {
+  padding-top: 50px;
+}
+.contactForm .form .inputContact h1 {
+  width: 480px;
+  height: 50px;
+  font-family: Roboto;
+  font-size: 50px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  color: #444444;
+}
+.contactForm .form .inputContact .form-group {
+  font-family: Roboto;
+  width: 500px;
+  height: 40px;
+  border-radius: 3px;
+}
+.contactForm .form .inputContact .form-group .form-control {
+  height: calc(2.25rem + 15px);
+}
+.contactForm .form .inputContact .form-group input,
+.contactForm .form .inputContact .form-group textarea {
+  font-size: 15px;
+}
+.contactForm .form .inputContact .form-group textarea.form-control {
+  height: auto;
+}
+.contactForm .form .inputContact a {
+  margin: 60px 70px 0px 54px;
+  background-color: #f7890b;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.2em;
+  display: inline-block;
+  padding: 0.5em 2em;
+  border: 2px solid #f7890b;
+  transition: 0.02s 0.2s cubic-bezier(0.1, 0, 0.1, 1);
+}
+.contactForm .form .inputContact a::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 100%;
+  bottom: 0;
+  background: #fff;
+  border: 2px solid #fff;
+  transition: 0.3s 0.2s cubic-bezier(0.1, 0, 0.1, 1), left 0.3s cubic-bezier(0.1, 0, 0.1, 1);
+  z-index: -1;
+}
+.contactForm .form .inputContact a::after {
+  content: "";
+  display: inline-block;
+  background-image: url("./image/right-arrow.png");
+  position: absolute;
+  top: 0;
+  left: calc(100% - 3em);
+  right: 3em;
+  bottom: 0;
+  background-size: 1.5em;
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: right 0.3s cubic-bezier(0.1, 0, 0.1, 1);
+}
+.contactForm .form .inputContact a:hover {
+  padding: 0.5em 3.5em 0.5em 0.5em;
+}
+.contactForm .form .inputContact a:hover::before {
+  left: calc(100% - 3em);
+  right: 0;
+  transition: 0.3s cubic-bezier(0.1, 0, 0.1, 1), left 0.3s 0.2s cubic-bezier(0.1, 0, 0.1, 1);
+}
+.contactForm .form .inputContact a:hover::after {
+  right: 0;
+  transition: right 0.3s 0.2s cubic-bezier(0.1, 0, 0.1, 1);
+}
+
+.panelContent {
+  position: relative;
+}
+.panelContent img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.panelContent .panelGradient {
+  width: 100%;
+}
+.panelContent .panelGradient .content {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  z-index: 2;
+}
+.panelContent .panelGradient .content h1 {
+  font-family: Roboto;
+  font-size: 50px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.1;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+}
+.panelContent .panelGradient .content p {
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.55;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+}
+.panelContent .panelGradient .content .button {
+  border-radius: 3px;
+  background-color: #f7890b;
+  border: none;
+  color: white;
+  padding: 4px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-family: Roboto;
+  font-weight: bold;
+}
+
+.panelContent::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #000000);
+  z-index: 1;
+}
+
+.panelFounder {
+  padding: 75px 0px;
+}
+.panelFounder .content {
+  padding-top: 55px;
+}
+.panelFounder .content h1 {
+  font-family: Roboto;
+  font-size: 42px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1;
+  letter-spacing: normal;
+  color: #444444;
+}
+.panelFounder .content p {
+  margin-top: 20px;
+  width: 500px;
+  height: 215px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.55;
+  letter-spacing: normal;
+  color: #222222;
+}
+.panelFounder .content .button {
+  border-radius: 3px;
+  background-color: #f7890b;
+  border: none;
+  color: white;
+  padding: 4px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-family: Roboto;
+  font-weight: bold;
+}
+.panelFounder .image {
+  float: right;
+  width: 400px;
+  height: 450px;
+}
+.panelFounder .image img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.footer {
+  margin-top: 50px;
+  width: 100%;
+  height: 200px;
+  box-shadow: 0 -3px 8px 0 rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+}
+.footer .footerContent {
+  padding: 15px;
+  width: 65%;
+  margin: 0 auto;
+}
+.footer .footerContent .detailContent,
+.footer .footerContent .map {
+  float: left;
+}
+.footer .footerContent .detailContent {
+  padding-left: 20px;
+}
+.footer .footerContent .detailContent .logo {
+  padding-right: 20px;
+}
+.footer .footerContent .detailContent .fa {
+  padding: 9px;
+  font-size: 12px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 23px 5px;
+  border-radius: 50%;
+}
+.footer .footerContent .detailContent .fa:hover {
+  opacity: 0.7;
+}
+.footer .footerContent .detailContent .fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.footer .footerContent .detailContent .fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+.footer .footerContent .detailContent .fa-instagram {
+  background: #125688;
+  color: white;
+}
+.footer .footerContent .naviFooter ul {
+  margin-left: 0px !important;
+  padding-left: 0px !important;
+}
+.footer .footerContent .naviFooter ul li {
+  padding: 12px;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 0.8;
+  letter-spacing: normal;
+  color: #222222;
+}
+.footer .footerContent .smallInformation ul {
+  margin-top: 10px;
+  padding: 0px;
+}
+.footer .footerContent .smallInformation ul li {
+  padding-left: 10px;
+}
+.footer .footerContent .smallInformation ul li p {
+  padding-right: 20px;
+  margin-left: 10px;
+  padding-top: 4px;
+  text-align: right;
+  display: inline-block;
+  color: #005c13;
+  border-right: 1px solid #005c13;
+}
+.footer .footerContent .smallInformation ul li .last {
+  border-right: none;
 }
 
 a,
