--- a/style.css
+++ b/style.css
@@ -16,11 +16,10 @@ body {
 
 .topBar {
   background-color: #005c13;
-  height: 40px;
-  width: 100%;
   position: relative;
 }
 .topBar .smallInformation ul {
+  margin-bottom: 0;
   margin-top: 10px;
   padding: 0px;
 }
@@ -459,22 +458,13 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.panelExpertise .expertiseContent .first {
-  margin-right: 50px;
-}
-.panelExpertise .expertiseContent .center {
-  margin: 0px 25px 0px 25px;
-}
-.panelExpertise .expertiseContent .last {
-  margin-left: 50px;
-}
 
 .contactForm {
   margin-top: 60px;
   padding-bottom: 100px;
 }
 .contactForm .form {
-  width: 1440px;
+  width: 100%;
   box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
 }
@@ -503,7 +493,6 @@ body {
 .contactForm .form .inputContact .form-group {
   font-family: Roboto;
   width: 500px;
-  height: 40px;
   border-radius: 3px;
 }
 .contactForm .form .inputContact .form-group .form-control {
@@ -516,59 +505,24 @@ body {
 .contactForm .form .inputContact .form-group textarea.form-control {
   height: auto;
 }
-.contactForm .form .inputContact a {
-  margin: 60px 70px 0px 54px;
+.contactForm .form .inputContact .button {
+  border-radius: 3px;
   background-color: #f7890b;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  color: #fff;
+  border: none;
+  color: white;
+  padding: 4px 30px;
+  text-align: center;
   text-decoration: none;
-  font-size: 1.2em;
   display: inline-block;
-  padding: 0.5em 2em;
-  border: 2px solid #f7890b;
-  transition: 0.02s 0.2s cubic-bezier(0.1, 0, 0.1, 1);
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-family: Roboto;
+  font-weight: bold;
 }
-.contactForm .form .inputContact a::before {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 100%;
-  bottom: 0;
-  background: #fff;
-  border: 2px solid #fff;
-  transition: 0.3s 0.2s cubic-bezier(0.1, 0, 0.1, 1), left 0.3s cubic-bezier(0.1, 0, 0.1, 1);
-  z-index: -1;
-}
-.contactForm .form .inputContact a::after {
-  content: "";
-  display: inline-block;
-  background-image: url("./image/right-arrow.png");
-  position: absolute;
-  top: 0;
-  left: calc(100% - 3em);
-  right: 3em;
-  bottom: 0;
-  background-size: 1.5em;
-  background-repeat: no-repeat;
-  background-position: center;
-  transition: right 0.3s cubic-bezier(0.1, 0, 0.1, 1);
-}
-.contactForm .form .inputContact a:hover {
-  padding: 0.5em 3.5em 0.5em 0.5em;
-}
-.contactForm .form .inputContact a:hover::before {
-  left: calc(100% - 3em);
-  right: 0;
-  transition: 0.3s cubic-bezier(0.1, 0, 0.1, 1), left 0.3s 0.2s cubic-bezier(0.1, 0, 0.1, 1);
-}
-.contactForm .form .inputContact a:hover::after {
-  right: 0;
-  transition: right 0.3s 0.2s cubic-bezier(0.1, 0, 0.1, 1);
+.contactForm .form .inputContact .button a {
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .panelContent {
@@ -584,7 +538,7 @@ body {
 .panelContent .panelGradient .content {
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, 0%);
   z-index: 2;
@@ -693,15 +647,11 @@ body {
 }
 
 .footer {
-  margin-top: 50px;
-  width: 100%;
-  height: 200px;
   box-shadow: 0 -3px 8px 0 rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
 }
 .footer .footerContent {
   padding: 15px;
-  width: 60%;
   margin: 0 auto;
 }
 .footer .footerContent .detailContent,
