--- a/style.css
+++ b/style.css
@@ -206,6 +206,12 @@ body {
   border-color: #373737;
   transition: border 0.1s linear 0s;
 }
+.slideShow .btn:hover {
+  cursor: pointer;
+  transition: 0.2s;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: rgba(255, 255, 255, 0.3) 2px 2px 20px 0px;
+}
 .slideShow .slideshow {
   overflow: hidden;
   position: relative;
@@ -512,6 +518,12 @@ body {
   line-height: 1.55;
   letter-spacing: normal;
   color: #ffffff;
+}
+.panelContent .content a:hover {
+  cursor: pointer;
+  transition: 0.2s;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: rgba(255, 255, 255, 0.3) 2px 2px 20px 0px;
 }
 @media (max-width: 1200px) {
   .panelContent .content {
